# Alex-Velez-raybit

./: Cargo.toml  LICENSE  README.md  bf_tools.py  input_map_parser.py  main.rbf  raylib_map.txt  text_to_ascii.py
example/: basic_window.bf  minified.bf
input_maps/: flip_down.txt  flip_left.txt  flip_right.txt  flip_up.txt  raylib_map.txt
src/: flip_down.rs  flip_left.rs  flip_right.rs  flip_up.rs  main.rs  raylib_map.rs
test/: basic_window.rbf  minified.bf
